--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -1,4 +1,4 @@
-body{
+body {
     overflow: hidden;
 }
 
@@ -6,7 +6,7 @@ body::-webkit-scrollbar {
     display: none;
 }
 
-.container{
+.container {
     height: 100%;
     width: 100%;
 }
@@ -14,23 +14,23 @@ body::-webkit-scrollbar {
 .profile-container {
     height: 100vh;
     width: 400px;
-    float:left;
+    float: left;
     word-wrap: break-word;
     display: flex;
     align-items: center;
     background: #fff;
     flex-direction: column;
-    box-shadow: 2px 3px 4px rgba(0,0,0,0.2);
+    box-shadow: 2px 3px 4px rgba(0, 0, 0, 0.2);
 }
 
-.profile-contents{
+.profile-contents {
     width: 100%;
     margin-top: 40px;
-    background:#fff;
+    background: #fff;
     font-family: sans-serif;
 }
 
-.posts-container{
+.posts-container {
     height: 100vh;
     word-wrap: break-word;
     overflow: auto !important;
@@ -40,27 +40,27 @@ body::-webkit-scrollbar {
     display: none;
 }
 
-.profile-picture{
+.profile-picture {
     width: 200px;
     height: 200px;
     object-fit: cover;
     border-radius: 50%;
     border: 4px solid #fff;
-    box-shadow: 0px 5px 10px rgba(0,0,0,.2);
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
 }
 
-.profile-icon{
+.profile-icon {
     width: 18px;
     color: black;
 }
 
-.info-section{
+.info-section {
     padding-top: 15px;
     margin: auto;
     display: block;
 }
 
-.profile-greeting{
+.profile-greeting {
     display: block;
     text-align: center;
     font-size: 30px;
@@ -68,24 +68,24 @@ body::-webkit-scrollbar {
     font-weight: bold;
 }
 
-.profile-picture-container{
+.profile-picture-container {
     width: 100%;
     margin: auto;
     display: block;
     text-align: center;
 }
 
-.profile-info-container{
+.profile-info-container {
     width: 100%;
 }
 
-.profile-text{
+.profile-text {
     font-size: 18px;
     font-family: sans-serif;
     padding-left: 90px;
 }
 
-.posts-label{
+.posts-label {
     font-size: 30px;
     font-family: sans-serif;
     font-weight: bold;
@@ -93,30 +93,29 @@ body::-webkit-scrollbar {
     padding-left: 70px;
 }
 
-.posts-list{
+.posts-list {
     width: 100%;
     display: flex;
     flex-direction: column;
 }
 
-.posts{
+.posts {
     margin: 0 auto;
     width: 70%;
     height: 250px;
     border-radius: 15px;
     margin-bottom: 30px;
-    box-shadow: rgba(0, 0, 0, 0.10) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
-    
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
 }
 
-.posts-picture{
+.posts-picture {
     height: 80%;
     margin-left: 40px;
     border-radius: 15px;
     box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
 }
 
-.posts-image-container{
+.posts-image-container {
     height: 100%;
     align-items: center;
     width: 240px;
@@ -125,37 +124,36 @@ body::-webkit-scrollbar {
     float: left;
 }
 
-.posts-contents{
+.posts-contents {
     height: 100%;
     margin-left: 240px;
-
 }
 
-.pet-name{
+.pet-name {
     font-family: sans-serif;
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 8px;
 }
 
-.pet-species{
+.pet-species {
     font-family: sans-serif;
     font-size: 16px;
     margin-bottom: 15px;
 }
 
-.pet-description{
+.pet-description {
     resize: none;
     font-family: sans-serif;
     text-align: justify;
     text-justify: inter-word;
 }
 
-.pet-description::-webkit-scrollbar { 
-    display: none;  
+.pet-description::-webkit-scrollbar {
+    display: none;
 }
 
-.pet-description:disabled{
+.pet-description:disabled {
     background: transparent;
     color: black;
     font-family: sans-serif;
@@ -163,7 +161,8 @@ body::-webkit-scrollbar {
     outline: none;
 }
 
-.edit-button, .delete-button{
+.edit-button,
+.delete-button {
     width: 100px;
     background-color: #fff;
     color: #2b2b2b;
@@ -179,15 +178,15 @@ body::-webkit-scrollbar {
     cursor: pointer;
 }
 
-.edit-button:hover, .delete-button:hover
-{
+.edit-button:hover,
+.delete-button:hover {
     border-color: black;
-    background-color:black;
+    background-color: black;
     color: white;
     transition: 0.4s;
 }
 
-.post-buttons{
+.post-buttons {
     display: fixed;
     margin-right: 0;
     float: right;
