--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -1,7 +1,3 @@
-body {
-    overflow: hidden;
-}
-
 body::-webkit-scrollbar {
     display: none;
 }
@@ -126,6 +122,7 @@ body::-webkit-scrollbar {
 
 .posts-contents {
     height: 100%;
+    overflow: hidden;
     margin-left: 240px;
 }
 
@@ -143,10 +140,14 @@ body::-webkit-scrollbar {
 }
 
 .pet-description {
+    width: 100%;
+    height: 50%;
     resize: none;
     font-family: sans-serif;
     text-align: justify;
     text-justify: inter-word;
+    overflow-y: scroll;
+    padding-right: 2em;
 }
 
 .pet-description::-webkit-scrollbar {
