fixed some css in nav and profile

--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -15,31 +15,22 @@
 }
 
 .left,
-.center,
-.right {
+.center {
     display: flex;
     align-items: center;
 }
 
 .left {
-    width: 55vw;
     justify-content: flex-start;
 }
 
 .center {
-    width: 33vw;
     justify-content: center;
     gap: 0.5em;
 }
 
-.right {
-    width: 20vw;
-    justify-content: flex-end;
-}
-
 .left .button,
-.center .button,
-.right .button {
+.center .button {
     min-width: 10em;
     display: flex;
     justify-content: center;
@@ -61,8 +52,7 @@
 }
 
 .left .button:hover,
-.center .button:hover,
-.right .button:hover {
+.center .button:hover {
     background-color: darkcyan;
     color: white;
 }
