bug fix: profile page & map function

--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -8,7 +8,7 @@ body::-webkit-scrollbar {
 }
 
 .profile-container {
-    height: 100vh;
+    height: calc(100vh - 3em);
     width: 400px;
     float: left;
     word-wrap: break-word;
@@ -27,7 +27,7 @@ body::-webkit-scrollbar {
 }
 
 .posts-container {
-    height: 100vh;
+    height: calc(100vh - 3em);
     word-wrap: break-word;
     overflow: auto !important;
 }
