--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -97,12 +97,21 @@ body::-webkit-scrollbar {
 }
 
 .posts {
-    margin: 0 auto;
-    width: 70%;
-    height: 250px;
+    width: 60vw;
+    height: 100%;
     border-radius: 15px;
     margin-bottom: 30px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 2em;
+}
+
+.profile-form {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .posts-picture {
@@ -113,12 +122,16 @@ body::-webkit-scrollbar {
 }
 
 .posts-image-container {
-    height: 100%;
+    height: 90%;
+    width: 30vw;
     align-items: center;
-    width: 240px;
     display: flex;
     align-items: center;
     float: left;
+}
+
+.posts-image-container>img {
+    width: 100%;
 }
 
 .posts-contents {
