--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -1,9 +1,11 @@
-body{
-    overflow: hidden;
+* {
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+    overflow-y: scroll; 
 }
 
-body::-webkit-scrollbar {
-    display: none;
+*::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
 }
 
 .container{
