--- a/client/src/components/Admin/Admin.css
+++ b/client/src/components/Admin/Admin.css
@@ -1,33 +1,34 @@
-html, body{
+html,
+body {
     height: 100%;
 }
 
-.container{
+.container {
     width: 100%;
     height: 100vh;
 }
 
-.admin-container{
+.admin-container {
     display: flex;
     height: 100%;
 }
 
-.menu-container{
+.menu-container {
     width: 400px;
     height: 100%;
     margin-bottom: 50px;
     min-height: 100%;
-    box-shadow: 2px 3px 4px rgba(0,0,0,0.2);
+    box-shadow: 2px 3px 4px rgba(0, 0, 0, 0.2);
 }
 
-.users-container{
+.users-container {
     width: 100%;
     margin-bottom: 0px;
     padding-bottom: 70px;
     overflow: auto;
 }
 
-.admin-greeting{
+.admin-greeting {
     display: block;
     text-align: center;
     font-size: 30px;
@@ -36,7 +37,7 @@ html, body{
     margin-top: 30px;
 }
 
-.table-container{
+.table-container {
     margin-top: 30px;
     margin-left: 50px;
     margin-right: 50px;
@@ -83,11 +84,11 @@ html, body{
     border-radius: 5px;
 }
 
-.checkbox-container{
+.checkbox-container {
     vertical-align: middle !important;
 }
 
-.delete-button{
+.delete-button {
     width: 100px;
     background-color: #fff;
     color: #2b2b2b;
@@ -103,13 +104,13 @@ html, body{
     cursor: pointer;
 }
 
-.admin-links{
+.admin-links {
     text-align: center;
     justify-content: center;
     margin-top: 40px;
 }
 
-.admin-links a{
+.admin-links a {
     display: inline-block;
     text-decoration: none;
     padding: 2px 20px;
@@ -124,40 +125,41 @@ html, body{
 
 .admin-links a:after {
     display: block;
-    content: '';
-    border-bottom: solid 3px #000;  
-    transform: scaleX(0); 
+    content: "";
+    border-bottom: solid 3px #000;
+    transform: scaleX(0);
     transition: transform 350ms ease-in-out;
-    transform-origin: 0 0; /*50% 50% for middle -> full -> middle */
+    transform-origin: 0 0;
+    /*50% 50% for middle -> full -> middle */
     padding-top: 10px;
-  }
+}
 
-  .admin-links a:hover:after { 
+.admin-links a:hover:after {
     transform: scaleX(1);
-    transform-origin:50% 0;
+    transform-origin: 50% 0;
     padding-top: 10px;
-  }
+}
 
-  .profile-icon{
+.profile-icon {
     font-size: 17px;
-  }
+}
 
-  .site-info{
+.site-info {
     margin-top: 50px;
     font-family: sans-serif;
     text-align: center;
-  }
+}
 
-  .site-info-header{
+.site-info-header {
     text-align: center;
     justify-content: center;
     font-size: 28px;
     font-family: sans-serif;
     font-weight: bold;
     position: relative;
-  }
+}
 
-  .site-info-header:before{
+.site-info-header:before {
     content: "";
     display: block;
     background: #000;
@@ -167,9 +169,9 @@ html, body{
     left: 0;
     top: 45%;
     z-index: -2;
-  }
+}
 
-  .site-info-header:after{
+.site-info-header:after {
     content: "";
     display: block;
     background: #000;
@@ -179,48 +181,46 @@ html, body{
     right: 0;
     top: 45%;
     z-index: -2;
-  }
+}
 
-  .header-bg{
+.header-bg {
     background: #fff;
     padding-left: 8px;
     padding-right: 8px;
-  }
+}
 
-  .site-info-subheader{
+.site-info-subheader {
     margin-top: 10px;
     font-family: arial;
     text-align: center;
     font-weight: 550;
     font-size: 15px;
-  }
+}
 
-  .site-info-users-header{
+.site-info-users-header {
     margin-top: 50px;
     font-family: arial;
     text-align: center;
     font-weight: 550;
     font-size: 17px;
     margin-bottom: 25px;
-  }
+}
 
-  .site-info-posts-header{
+.site-info-posts-header {
     margin-top: 40px;
     font-family: arial;
     text-align: center;
     font-weight: 550;
     font-size: 17px;
     margin-bottom: 25px;
-  }
-  
-  .site-info-users-icon{
+}
+
+.site-info-users-icon {
     font-size: 25px;
     margin-right: 20px;
-  }
+}
 
-  .site-info-posts-icon{
+.site-info-posts-icon {
     font-size: 30px;
     margin-right: 20px;
-  }
-
-  
+}
