--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -4,6 +4,7 @@
     scrollbar-width: none;
     /* for Firefox */
     overflow-y: scroll;
+    transition: all 0.3s ease-in-out;
 }
 
 *::-webkit-scrollbar {
@@ -94,14 +95,19 @@
     font-size: 30px;
     font-family: sans-serif;
     font-weight: bold;
-    padding-top: 37px;
-    padding-left: 70px;
+    padding: 2em;
+}
+
+.posts-form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .posts-list {
     width: 100%;
-    display: flex;
-    flex-direction: column;
 }
 
 .posts {
@@ -109,51 +115,74 @@
     width: 70%;
     height: 250px;
     border-radius: 15px;
-    margin-bottom: 30px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 1em;
 }
 
 .posts-picture {
-    height: 80%;
-    width: 220px;
-    margin-left: 40px;
+    margin: 0 1em 0 1em;
     border-radius: 15px;
-    box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
 
 .posts-image-container {
+    flex: 0 0 auto;
+    max-width: 40%;
     height: 100%;
-    align-items: center;
-    width: 240px;
-    margin-right: 60px;
     display: flex;
+    justify-content: center;
     align-items: center;
-    float: left;
 }
 
 .posts-contents {
+    flex: 0 0 auto;
     height: 100%;
-    margin-left: 280px;
+    width: 60%;
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.post-content-upper {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.post-title {
+    padding: 10px;
+    max-width: 50%;
+    display: flex;
+    flex-direction: column;
+    overflow-x: scroll;
+    gap: 0.5em;
 }
 
 .pet-name {
     font-family: sans-serif;
-    font-size: 20px;
+    font-size: 25px;
     font-weight: bold;
-    margin-bottom: 8px;
 }
 
 .pet-species {
     font-family: sans-serif;
-    font-size: 16px;
+    font-size: 13px;
     margin-bottom: 15px;
+    text-transform: uppercase;
 }
 
 .pet-description {
-    resize: none;
+    padding: 10px;
+    width: 100%;
     font-family: sans-serif;
     text-align: justify;
     text-justify: inter-word;
+    overflow-y: scroll;
 }
 
 .pet-description::-webkit-scrollbar {
@@ -168,25 +197,29 @@
     outline: none;
 }
 
-.edit-button,
-.delete-button {
-    width: 100px;
+.post-delete-button,
+.post-edit-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 7em;
+    padding: 0.5em;
     background-color: #fff;
     color: #2b2b2b;
-    font-weight: bold;
-    font-family: Georgia;
-    padding: 10px 20px;
-    text-align: center;
-    border-radius: 5px;
     border-color: #2b2b2b;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 12px;
+    border-radius: 3px;
+    font-family: Georgia;
+    font-size: 13px;
+    text-transform: uppercase;
+    letter-spacing: 0.9px;
+    font-weight: 500;
+    transition: all 0.3s ease 0s;
     cursor: pointer;
+    text-decoration: none;
 }
 
-.edit-button:hover,
-.delete-button:hover {
+.post-delete-button:hover,
+.post-edit-button:hover {
     border-color: black;
     background-color: black;
     color: white;
@@ -194,14 +227,17 @@
 }
 
 .post-buttons {
-    display: fixed;
-    margin-right: 0;
-    float: right;
-    margin-right: 40px;
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    justify-content: center;
+    align-items: flex-end;
+    gap: 0.5em;
+    padding: 10px;
 }
 
 .posts-separator {
-    width: 90%;
+    width: 100%;
     color: #bbb;
-    margin-bottom: 1em;
+    margin: 0.5em;
 }
