--- a/client/src/components/Login/Login.css
+++ b/client/src/components/Login/Login.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
 :root {
-    --login-page-height: calc(100vh);
+    --login-page-height: calc(100vh - 4px);
 }
+
 
 .login-page {
     display: flex;
@@ -9,12 +10,17 @@
     align-items: center;
     overflow: hidden;
     box-shadow: border-box;
+    height: 100%;
+}
+
+.login-title{
+    width: 75%;
+    height: 100%;
 }
 
 #bg {
     height: var(--login-page-height);
     box-shadow: 0.5em 1em 1em 0.5em rgba(0, 0, 0, 0.3);
-    padding: 0.5em;
 }
 
 .login-form-wrapper {
