--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -130,7 +130,7 @@
 
 .posts-image-container {
     flex: 0 0 auto;
-    max-width: 40%;
+    width: 40%;
     height: 100%;
     display: flex;
     justify-content: center;
