--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -49,6 +49,8 @@
     .profile-picture {
         width: 200px;
         height: 200px;
+        margin-top: 2em;
+        margin-bottom: 2em;
         object-fit: cover;
         border-radius: 50%;
         border: 4px solid #fff;
