--- a/client/src/components/Add/Add.css
+++ b/client/src/components/Add/Add.css
@@ -1,8 +1,41 @@
+@import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
+:root {
+    --login-page-height: calc(100vh - 4px);
+    --page-height-with-navbar: calc(100vh - 3em);
+    --navyblue: #002040;
+    --brown: #7b4935;
+    --light-brown: #EBC7B2;
+    --kinda-white: #f5f5f5;
+}
+
+* {
+    /* Scrollbars */
+    /* -ms-overflow-style: none; */
+    /* scrollbar-width: none; */
+    /* overflow-y: scroll; */
+    transition: all 0.3s ease-in-out;
+    /* element styling */
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    height: 100%;
+    width: 100%;
+}
+
+
+/* 
+*::-webkit-scrollbar {
+    display: none;
+} */
+
 .add-outer {
     width: 100vw;
-    height: calc(100vh - 3em);
+    height: var(--page-height-with-navbar);
     display: flex;
     justify-content: center;
     align-items: center;
-    background: darkcyan;
+    background-color: var(--light-brown);
 }
