--- a/client/src/components/Admin/Admin.css
+++ b/client/src/components/Admin/Admin.css
@@ -1,11 +1,6 @@
-html,
-body {
-    height: 100%;
-}
-
 .container {
     width: 100%;
-    height: 100vh;
+    height: var(--page-height-with-navbar);
 }
 
 .admin-container {
@@ -18,7 +13,8 @@ body {
     height: 100%;
     margin-bottom: 50px;
     min-height: 100%;
-    box-shadow: 2px 3px 4px rgba(0, 0, 0, 0.2);
+    z-index: 2;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 15px 25px, rgba(0, 0, 0, 0.5) 0px 5px 10px;
 }
 
 .users-container {
@@ -26,6 +22,7 @@ body {
     margin-bottom: 0px;
     padding-bottom: 70px;
     overflow: auto;
+    background-color: var(--light-brown);
 }
 
 .admin-greeting {
@@ -38,9 +35,12 @@ body {
 }
 
 .table-container {
-    margin-top: 30px;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin: 30px auto;
+    width: 90%;
+    background-color: var(--kinda-white);
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 15px 25px, rgba(0, 0, 0, 0.3) 0px 5px 10px;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
 .users-table {
@@ -50,20 +50,17 @@ body {
     margin: 25px 0;
     font-size: 0.9em;
     font-family: sans-serif;
-    min-width: 400px;
+    width: 100%;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-    margin-left: 50px;
-    margin-right: 50px;
-    border-radius: 5px;
     text-align: center;
     margin: 0 auto;
     overflow: auto;
 }
 
 .users-table thead tr {
-    background-color: #0a0a0a;
-    color: #ffffff;
-    border-radius: 5px;
+    background-color: var(--navyblue);
+    color: var(--kinda-white);
+    width: 100%;
 }
 
 .users-table th,
@@ -75,13 +72,8 @@ body {
     border-bottom: 1px solid #dddddd;
 }
 
-.users-table tbody tr:nth-of-type(even) {
-    background-color: #f3f3f3;
-}
-
 .users-table tbody tr:last-of-type {
     border-bottom: 2px solid #2b2b2b;
-    border-radius: 5px;
 }
 
 .checkbox-container {
@@ -110,10 +102,10 @@ body {
     margin-top: 40px;
 }
 
-.admin-links a {
+.admin-links>p {
     display: inline-block;
     text-decoration: none;
-    padding: 2px 20px;
+    padding: 0.5em;
     font-size: 0.9em;
     color: black;
     font-weight: 600;
@@ -123,25 +115,14 @@ body {
     margin-bottom: 10px;
 }
 
-.admin-links a:after {
-    display: block;
-    content: "";
-    border-bottom: solid 3px #000;
-    transform: scaleX(0);
-    transition: transform 350ms ease-in-out;
-    transform-origin: 0 0;
-    /*50% 50% for middle -> full -> middle */
-    padding-top: 10px;
-}
-
-.admin-links a:hover:after {
-    transform: scaleX(1);
-    transform-origin: 50% 0;
-    padding-top: 10px;
+.admin-links>p:hover {
+    cursor: pointer;
+    transform: scale(1.05);
 }
 
 .profile-icon {
     font-size: 17px;
+    padding: 0 1em;
 }
 
 .site-info {
