--- a/client/src/components/CardList/CardList.css
+++ b/client/src/components/CardList/CardList.css
@@ -1,15 +1,16 @@
 .card-list-all {
     background: #fff;
     border-radius: 10px;
+    background-color: var(--light-brown);
 }
 
 .display-bar {
     width: 100%;
-    height: 5vh;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 0.5em;
+    padding: 1em;
 }
 
 .display-bar-btn {
@@ -20,7 +21,7 @@
     letter-spacing: 0.9px;
     font-weight: 550;
     color: black;
-    background-color: white;
+    background-color: inherit;
     border-radius: 3px;
     border: none;
     transition: all 0.3s ease 0s;
@@ -33,8 +34,7 @@
 
 .display-bar-btn:focus,
 .display-bar-btn:hover {
-    background-color: darkcyan;
-    box-shadow: 0px 15px 20px lightcyan;
+    background-color: var(--brown);
     color: white;
 }
 
@@ -42,21 +42,21 @@
 /* gallery specific CSS */
 
 .card-list-container {
-    /* max-height: 40vh; */
-    height: 80%;
-    max-height: 60vh;
-    width: 70vw;
+    width: 100vw;
     overflow-y: scroll;
 }
 
 .-fx-image-gal {
     display: flex;
+    background-color: var(--kinda-white);
     align-items: center;
     flex-wrap: wrap;
     justify-content: center;
     width: 95%;
-    margin: 0px auto;
-    padding: 0px;
+    margin: 0em auto 2em auto;
+    padding: 2em 0 2em 0;
+    border-radius: 10px;
+    gap: 0.7em;
 }
 
 .-fx-gal-item {
@@ -65,33 +65,41 @@
     overflow: hidden;
     border-radius: 10px;
     margin: 0.5em;
-    position: relative;
-    height: 30vh;
+    height: 40vh;
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+    background-color: white;
+    border: 0.01rem solid rgb(232, 232, 232);
+}
+
+.-fx-gal-item:hover {
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
+}
+
+.-fx-gal-image-thumb {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 70%;
+    margin: 0.7em;
 }
 
 .-fx-gal-image-thumb img {
-    aspect-ratio: 9/16;
-    width: 100%;
-    height: 100%;
+    max-height: 100%;
+    max-width: 100%;
     border-radius: 10px;
-    cursor: pointer;
     transition: all 0.3s ease-in-out;
-    position: absolute;
 }
 
 .-fx-gal-image-text {
-    opacity: 0;
-    position: absolute;
     width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.5);
+    height: 20%;
+    color: black;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    align-items: center;
+    align-items: flex-start;
     transition: all 0.3s ease-in-out;
     border-radius: 10px;
 }
@@ -99,19 +107,14 @@
 .-fx-gal-image-text>ul {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .-fx-gal-image-text>ul>li {
     list-style: none;
     text-decoration: none;
-    padding: 2px;
+    padding-left: 1em;
     font-size: 80%;
-}
-
-.-fx-gal-image-text:hover {
-    opacity: 1;
-    cursor: pointer;
 }
 
 .-fx-gal-image-text-description {
