--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -1,22 +1,17 @@
 .home-container {
-    height: calc(100vh - 3em);
     width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: darkcyan;
+    background: white;
 }
 
 .home-center {
-    width: 70vw;
-    margin-top: 1em;
-    /* display: flex;
-    flex-direction: column;
-    align-items: center; */
+    min-height: var(--page-height-with-navbar);
     overflow: hidden;
     overflow-x: hidden;
     overflow-y: scroll;
-    /* box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.10); */
+    background-color: var(--light-brown);
 }
 
 .home-center::-webkit-scrollbar {
@@ -24,7 +19,10 @@
 }
 
 .home-center-heading {
-    color: white;
+    display: flex;
+    justify-content: center;
+    color: var(--navyblue);
     font-size: 8vmin;
-    padding: 0 0 0.1em 0.5em;
+    padding: 1em;
+    font-weight: 600;
 }
