--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -1,535 +1,248 @@
-    * {
-        -ms-overflow-style: none;
-        /* for Internet Explorer, Edge */
-        scrollbar-width: none;
-        /* for Firefox */
-        overflow-y: scroll;
-        transition: all 0.3s ease-in-out;
-    }
-    
-    *::-webkit-scrollbar {
-        display: none;
-        /* for Chrome, Safari, and Opera */
-    }
-    
-    .container {
-        height: 100%;
-        width: 100%;
-    }
-    
-    .profile-container {
-        height: 100vh;
-        width: 400px;
-        float: left;
-        word-wrap: break-word;
-        display: flex;
-        align-items: center;
-        background: #fff;
-        flex-direction: column;
-        box-shadow: 2px 3px 4px rgba(0, 0, 0, 0.2);
-    }
-    
-    .profile-contents {
-        width: 100%;
-        margin-top: 40px;
-        background: #fff;
-        font-family: sans-serif;
-    }
-    
-    .posts-container {
-        height: 100vh;
-        word-wrap: break-word;
-        overflow: auto !important;
-    }
-    
-    .posts-container::-webkit-scrollbar {
-        display: none;
-    }
-    
-    .profile-picture {
-        width: 200px;
-        height: 200px;
-        margin-top: 2em;
-        margin-bottom: 2em;
-        object-fit: cover;
-        border-radius: 50%;
-        border: 4px solid #fff;
-        box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
-    }
-    
-    .profile-icon {
-        width: 18px;
-        color: black;
-    }
-    
-    .info-section {
-        padding-top: 15px;
-        margin: auto;
-        display: block;
-    }
-    
-    .profile-greeting {
-        display: block;
-        text-align: center;
-        font-size: 30px;
-        font-family: sans-serif;
-        font-weight: bold;
-    }
-    
-    .profile-picture-container {
-        width: 100%;
-        margin: auto;
-        display: block;
-        text-align: center;
-    }
-    
-    .profile-info-container {
-        width: 100%;
-    }
-    
-    .profile-text {
-        font-size: 18px;
-        font-family: sans-serif;
-        padding-left: 90px;
-    }
-    
-    .posts-label {
-        font-size: 30px;
-        font-family: sans-serif;
-        font-weight: bold;
-        padding: 2em;
-    }
-    
-    .posts-form {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    
-    .posts-list-wrapper {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-    }
-    
-    .posts-list {
-        width: 90%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        gap: 1em;
-    }
-    
-    .posts {
-        margin: 0 auto;
-        width: 100%;
-        height: 250px;
-        border-radius: 15px;
-        box-shadow: rgba(0, 0, 0, 0.1) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        margin: 1em;
-    }
-    
-    .posts-picture {
-        margin: 0 1em 0 1em;
-        border-radius: 15px;
-        box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
-    }
-    
-    .posts-image-container {
-        flex: 0 0 auto;
-        width: 40%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    
-    .posts-contents {
-        flex: 0 0 auto;
-        height: 100%;
-        width: 60%;
-        padding: 1em;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
-    }
-    
-    .post-content-upper {
-        display: flex;
-        width: 100%;
-        justify-content: space-between;
-    }
-    
-    .post-title {
-        padding: 10px;
-        max-width: 50%;
-        display: flex;
-        flex-direction: column;
-        overflow-x: scroll;
-        gap: 0.5em;
-    }
-    
-    .post-title>input {
-        border: none;
-        border-bottom: 2px solid rgb(154, 154, 154);
-        color: rgb(36, 36, 36);
-        outline: none;
-        transition: all 0.3s ease-in-out;
-        margin-bottom: 10px;
-    }
-    
-    .post-title>input:hover {
-        transform: scale(1.1);
-    }
-    
-    #input-description {
-        border-radius: 5px;
-    }
-    
-    .post-title>input:hover {
-        transform: scale(1.1);
-    }
-    
-    .post-title>input:focus {
-        border-bottom-color: rgb(36, 36, 36);
-        transform: scale(1.1);
-    }
-    
-    .pet-name {
-        font-family: sans-serif;
-        font-size: 25px;
-        font-weight: bold;
-    }
-    
-    .pet-species {
-        font-family: sans-serif;
-        font-size: 13px;
-        margin-bottom: 15px;
-        text-transform: uppercase;
-    }
-    
-    .pet-description {
-        padding: 10px;
-        width: 100%;
-        font-family: sans-serif;
-        text-align: justify;
-        text-justify: inter-word;
-        overflow-y: scroll;
-    }
-    
-    .pet-description::-webkit-scrollbar {
-        display: none;
-    }
-    
-    .pet-description:disabled {
-        background: transparent;
-        color: black;
-        font-family: sans-serif;
-        border: none;
-        outline: none;
-    }
-    
-    .post-delete-button,
-    .post-edit-button {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-width: 7em;
-        padding: 0.5em;
-        background-color: #fff;
-        color: #2b2b2b;
-        border-color: #2b2b2b;
-        border-radius: 3px;
-        font-family: Georgia;
-        font-size: 13px;
-        text-transform: uppercase;
-        letter-spacing: 0.9px;
-        font-weight: 500;
-        transition: all 0.3s ease 0s;
-        cursor: pointer;
-        text-decoration: none;
-    }
-    
-    .post-delete-button:hover,
-    .post-edit-button:hover {
-        border-color: black;
-        background-color: black;
-        color: white;
-        transition: 0.4s;
-    }
-    
-    .post-buttons {
-        display: flex;
-        flex-direction: column;
-        width: 50%;
-        justify-content: center;
-        align-items: flex-end;
-        gap: 0.5em;
-        padding: 10px;
-    }
-    
-    .posts-separator {
-        width: 100%;
-        color: #bbb;
-        margin: 0.5em;
-    }
-    
-    .post-title>input:focus {
-        border-bottom-color: rgb(36, 36, 36);
-        transform: scale(1.1);
-    }
-    
-    .pet-name {
-        font-family: sans-serif;
-        font-size: 25px;
-        font-weight: bold;
-    }
-    
-    .pet-species {
-        font-family: sans-serif;
-        font-size: 13px;
-        margin-bottom: 15px;
-        text-transform: uppercase;
-    }
-    
-    .pet-description {
-        padding: 10px;
-        width: 100%;
-        font-family: sans-serif;
-        text-align: justify;
-        text-justify: inter-word;
-        overflow-y: scroll;
-    }
-    
-    .pet-description::-webkit-scrollbar {
-        display: none;
-    }
-    
-    .pet-description:disabled {
-        background: transparent;
-        color: black;
-        font-family: sans-serif;
-        border: none;
-        outline: none;
-    }
-    
-    .post-delete-button,
-    .post-edit-button {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-width: 7em;
-        padding: 0.5em;
-        background-color: #fff;
-        color: #2b2b2b;
-        border-color: #2b2b2b;
-        border-radius: 3px;
-        font-family: Georgia;
-        font-size: 13px;
-        text-transform: uppercase;
-        letter-spacing: 0.9px;
-        font-weight: 500;
-        transition: all 0.3s ease 0s;
-        cursor: pointer;
-        text-decoration: none;
-    }
-    
-    .post-delete-button:hover,
-    .post-edit-button:hover {
-        border-color: black;
-        background-color: black;
-        color: white;
-        transition: 0.4s;
-    }
-    
-    .post-buttons {
-        display: flex;
-        flex-direction: column;
-        width: 50%;
-        justify-content: center;
-        align-items: flex-end;
-        gap: 0.5em;
-        padding: 10px;
-    }
-    
-    .posts-separator {
-        width: 100%;
-        color: #bbb;
-        margin: 0.5em;
-    }
-    
-    .post-title>input:focus {
-        border-bottom-color: rgb(36, 36, 36);
-        transform: scale(1.1);
-    }
-    
-    .pet-name {
-        font-family: sans-serif;
-        font-size: 25px;
-        font-weight: bold;
-    }
-    
-    .pet-species {
-        font-family: sans-serif;
-        font-size: 13px;
-        margin-bottom: 15px;
-        text-transform: uppercase;
-    }
-    
-    .pet-description {
-        padding: 10px;
-        width: 100%;
-        font-family: sans-serif;
-        text-align: justify;
-        text-justify: inter-word;
-        overflow-y: scroll;
-    }
-    
-    .pet-description::-webkit-scrollbar {
-        display: none;
-    }
-    
-    .pet-description:disabled {
-        background: transparent;
-        color: black;
-        font-family: sans-serif;
-        border: none;
-        outline: none;
-    }
-    
-    .post-delete-button,
-    .post-edit-button {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-width: 7em;
-        padding: 0.5em;
-        background-color: #fff;
-        color: #2b2b2b;
-        border-color: #2b2b2b;
-        border-radius: 3px;
-        font-family: Georgia;
-        font-size: 13px;
-        text-transform: uppercase;
-        letter-spacing: 0.9px;
-        font-weight: 500;
-        transition: all 0.3s ease 0s;
-        cursor: pointer;
-        text-decoration: none;
-    }
-    
-    .post-delete-button:hover,
-    .post-edit-button:hover {
-        border-color: black;
-        background-color: black;
-        color: white;
-        transition: 0.4s;
-    }
-    
-    .post-buttons {
-        display: flex;
-        flex-direction: column;
-        width: 50%;
-        justify-content: center;
-        align-items: flex-end;
-        gap: 0.5em;
-        padding: 10px;
-    }
-    
-    .posts-separator {
-        width: 100%;
-        color: #bbb;
-        margin: 0.5em;
-    }
-    
-    .post-title>input:focus {
-        border-bottom-color: rgb(36, 36, 36);
-        transform: scale(1.1);
-    }
-    
-    .pet-name {
-        font-family: sans-serif;
-        font-size: 25px;
-        font-weight: bold;
-    }
-    
-    .pet-species {
-        font-family: sans-serif;
-        font-size: 13px;
-        margin-bottom: 15px;
-        text-transform: uppercase;
-    }
-    
-    .pet-description {
-        padding: 10px;
-        width: 100%;
-        font-family: sans-serif;
-        text-align: justify;
-        text-justify: inter-word;
-        overflow-y: scroll;
-    }
-    
-    .pet-description::-webkit-scrollbar {
-        display: none;
-    }
-    
-    .pet-description:disabled {
-        background: transparent;
-        color: black;
-        font-family: sans-serif;
-        border: none;
-        outline: none;
-    }
-    
-    .post-delete-button,
-    .post-edit-button {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-width: 7em;
-        padding: 0.5em;
-        background-color: #fff;
-        color: #2b2b2b;
-        border-color: #2b2b2b;
-        border-radius: 3px;
-        font-family: Georgia;
-        font-size: 13px;
-        text-transform: uppercase;
-        letter-spacing: 0.9px;
-        font-weight: 500;
-        transition: all 0.3s ease 0s;
-        cursor: pointer;
-        text-decoration: none;
-    }
-    
-    .post-delete-button:hover,
-    .post-edit-button:hover {
-        border-color: black;
-        background-color: black;
-        color: white;
-        transition: 0.4s;
-    }
-    
-    .post-buttons {
-        display: flex;
-        flex-direction: column;
-        width: 50%;
-        justify-content: center;
-        align-items: flex-end;
-        gap: 0.5em;
-        padding: 10px;
-    }
-    
-    .posts-separator {
-        width: 100%;
-        color: #bbb;
-        margin: 0.5em;
-    }
+.container {
+    width: 100%;
+}
+
+.profile-container {
+    height: var(--page-height-with-navbar);
+    width: 400px;
+    float: left;
+    word-wrap: break-word;
+    display: flex;
+    align-items: center;
+    background: #fff;
+    flex-direction: column;
+    box-shadow: 2px 3px 4px rgba(0, 0, 0, 0.2);
+}
+
+.profile-contents {
+    width: 100%;
+    margin-top: 40px;
+    background: #fff;
+    font-family: sans-serif;
+}
+
+.posts-container {
+    height: var(--page-height-with-navbar);
+    word-wrap: break-word;
+    overflow: auto !important;
+    background-color: var(--light-brown);
+}
+
+.profile-picture {
+    width: 200px;
+    height: 200px;
+    margin-top: 2em;
+    margin-bottom: 2em;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 4px solid #fff;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.profile-icon {
+    width: 18px;
+    color: black;
+}
+
+.info-section {
+    padding-top: 15px;
+    margin: auto;
+    display: block;
+}
+
+.profile-greeting {
+    display: block;
+    text-align: center;
+    font-size: 30px;
+    font-family: sans-serif;
+    font-weight: bold;
+}
+
+.profile-picture-container {
+    width: 100%;
+    margin: auto;
+    display: block;
+    text-align: center;
+}
+
+.profile-info-container {
+    width: 100%;
+}
+
+.profile-text {
+    font-size: 18px;
+    font-family: sans-serif;
+    padding-left: 90px;
+}
+
+.posts-label {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    color: var(--navyblue);
+    font-size: 6vmin;
+    padding: 0.5em 0 0.5em 1em;
+    font-weight: 600;
+}
+
+.posts-form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.posts-list-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.posts-list {
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.post {
+    margin: 0 auto;
+    width: 100%;
+    height: 250px;
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 1em;
+    background-color: var(--kinda-white);
+}
+
+.post-title {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 50%;
+    overflow-x: scroll;
+    gap: 0.3em;
+}
+
+.post-image-container {
+    /* flex: 0 0 auto; */
+    width: 40%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1em;
+    border-right: 0.01rem solid rgb(198, 192, 192);
+}
+
+.post-image-container>img {
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+}
+
+.post-contents {
+    flex: 0 0 auto;
+    height: 100%;
+    width: 60%;
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.post-content-upper {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+#input-description {
+    border-radius: 5px;
+    padding: 0.3em;
+    height: 50%;
+    resize: none;
+}
+
+#input-description:focus {
+    outline: none;
+}
+
+.pet-name {
+    font-family: sans-serif;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.pet-species {
+    font-family: sans-serif;
+    font-size: 15px;
+    text-transform: uppercase;
+}
+
+.pet-description {
+    margin-top: 10px;
+    width: 100%;
+    font-family: sans-serif;
+    text-align: justify;
+    text-justify: inter-word;
+    overflow-y: scroll;
+}
+
+.post-delete-button,
+.post-edit-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 7em;
+    padding: 0.5em;
+    background-color: #fff;
+    color: #2b2b2b;
+    border-color: #2b2b2b;
+    border-radius: 3px;
+    font-family: Georgia;
+    font-size: 13px;
+    text-transform: uppercase;
+    letter-spacing: 0.9px;
+    font-weight: 500;
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    text-decoration: none;
+    transform: scale(0.8);
+}
+
+.post-delete-button:hover,
+.post-edit-button:hover {
+    border-color: black;
+    background-color: black;
+    color: white;
+    transition: 0.4s;
+}
+
+.post-buttons {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    justify-content: center;
+    align-items: flex-end;
+    gap: 0.3em;
+}
+
+.post-title>input {
+    width: 100%;
+    padding: 0.3em;
+}
+
+.post-title>input:focus {
+    outline: none;
+}
