bug fix and Messages UI

--- a/client/src/components/Add/Add.css
+++ b/client/src/components/Add/Add.css
@@ -6,6 +6,8 @@
     --brown: #7b4935;
     --light-brown: #EBC7B2;
     --kinda-white: #f5f5f5;
+    --kinda-grey: #c1c1c1;
+    --dark-grey: #c4c2c2;
 }
 
 * {
