--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -140,7 +140,7 @@
     justify-content: center;
     align-items: center;
     padding: 1em;
-    border-right: 0.01rem solid rgb(198, 192, 192);
+    border-right: 0.01rem solid var(--kinda-grey);
 }
 
 .post-image-container>img {
