updated show and hide password in the login and signup page

--- a/client/src/components/Login/Login.css
+++ b/client/src/components/Login/Login.css
@@ -44,7 +44,6 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    gap: 1em;
     margin: 0.5em;
     transition: all 0.3s ease-in-out;
 }
@@ -76,6 +75,10 @@
 
 .form-field>input:focus {
     border-bottom-color: rgb(36, 36, 36);
+}
+
+.form-input{
+    margin-left: 1em;
 }
 
 .login-form-button-wrapper {
@@ -118,14 +121,8 @@
     gap: 5px;
 }
 
-#passEye {
-    margin-left: -40px;
-    max-width: 20px;
-    max-height: 20px;
-}
-
-#passEyeSlash {
-    margin-left: -40px;
+#passEye, #passEyeSlash {
+    margin-left: -25px;
     max-width: 20px;
     max-height: 20px;
 }
