Updated admin and profile css
Solved Issues:
- not able to horizontally scroll table in admin page
- button effects not working in admin page and changed color of button to navy blue
- button color in profile page was black but now changed to navy blue

--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -207,8 +207,8 @@
     min-width: 7em;
     padding: 0.5em;
     background-color: #fff;
-    color: #2b2b2b;
-    border-color: #2b2b2b;
+    color: var(--navyblue);
+    border-color: var(--navyblue);
     border-radius: 3px;
     font-family: Georgia;
     font-size: 13px;
@@ -223,8 +223,8 @@
 
 .post-delete-button:hover,
 .post-edit-button:hover {
-    border-color: black;
-    background-color: black;
+    border-color: var(--navyblue);
+    background-color: var(--navyblue);
     color: white;
     transition: 0.4s;
 }
