--- a/client/src/components/Admin/Admin.css
+++ b/client/src/components/Admin/Admin.css
@@ -40,7 +40,7 @@
     background-color: var(--kinda-white);
     box-shadow: rgba(0, 0, 0, 0.2) 0px 15px 25px, rgba(0, 0, 0, 0.3) 0px 5px 10px;
     border-radius: 10px;
-    overflow-x: scroll;
+    overflow-x: scroll !important;
 }
 
 .users-table {
@@ -65,7 +65,7 @@
 
 .users-table th,
 .users-table td {
-    padding: 12px 15px;
+    padding: 12px;
 }
 
 .users-table tbody tr {
@@ -81,19 +81,25 @@
 }
 
 .delete-button {
-    width: 100px;
     background-color: #fff;
-    color: #2b2b2b;
+    color: var(--navyblue);
     font-weight: bold;
     font-family: Georgia;
     padding: 10px 20px;
     text-align: center;
     border-radius: 5px;
-    border-color: #2b2b2b;
+    border-color: var(--navyblue);
     text-decoration: none;
     display: inline-block;
     font-size: 12px;
     cursor: pointer;
+}
+
+.delete-button:hover {
+    border-color: var(--navyblue);
+    background-color: var(--navyblue);
+    color: white;
+    transition: 0.4s;
 }
 
 .admin-links {
