updated username issue
- prevent user from signing in when the username already exists in the database

--- a/client/src/components/SignUp/SignUp.css
+++ b/client/src/components/SignUp/SignUp.css
@@ -64,3 +64,11 @@
 .signup-title {
     width: 115vh;
 }
+
+#sign-up-button:disabled,
+#sign-up-button[disabled]{
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+  cursor: default;
+}
