--- a/client/src/components/Admin/Admin.css
+++ b/client/src/components/Admin/Admin.css
@@ -211,3 +211,30 @@
     font-size: 30px;
     margin-right: 20px;
 }
+
+#post-table-delete-icon{
+    color: var(--navyblue);
+    cursor: pointer;
+    font-size: 25px;
+    margin-right: 10px;
+    margin-top:5px;
+    padding: 10px;
+    border-radius: 10%;
+    transition: all 0.4s ease;
+}
+
+#user-table-delete-icon{
+    color: var(--navyblue);
+    cursor: pointer;
+    font-size: 25px;
+    margin-right: 10px;
+    margin-top:5px;
+    padding: 10px;
+    border-radius: 10%;
+    transition: all 0.4s ease;
+}
+
+#post-table-delete-icon:hover, #user-table-delete-icon:hover {
+    transform: scale(1.2); 
+    background-color: rgb(207, 207, 207);
+} 
