--- a/client/src/components/Admin/Admin.css
+++ b/client/src/components/Admin/Admin.css
@@ -15,6 +15,7 @@
     min-height: 100%;
     z-index: 2;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 15px 25px, rgba(0, 0, 0, 0.5) 0px 5px 10px;
+    background-color: var(--kinda-white);
 }
 
 .users-container {
@@ -111,7 +112,7 @@
 .admin-links>p {
     display: inline-block;
     text-decoration: none;
-    padding: 0.5em;
+    padding: 0.5em 1em 0.5em 0;
     font-size: 0.9em;
     color: black;
     font-weight: 600;
@@ -119,11 +120,13 @@
     text-transform: uppercase;
     letter-spacing: 0.05em;
     margin-bottom: 10px;
+    border-radius: 5px;
 }
 
 .admin-links>p:hover {
     cursor: pointer;
-    transform: scale(1.05);
+    background-color: var(--hover-background);
+    /* transform: scale(1.05); */
 }
 
 .profile-icon {
@@ -171,7 +174,7 @@
 }
 
 .header-bg {
-    background: #fff;
+    background: var(--kinda-white);
     padding-left: 8px;
     padding-right: 8px;
 }
@@ -212,29 +215,20 @@
     margin-right: 20px;
 }
 
-#post-table-delete-icon{
+#post-table-delete-icon,
+#user-table-delete-icon {
     color: var(--navyblue);
     cursor: pointer;
-    font-size: 25px;
+    font-size: var(--icon-size);
     margin-right: 10px;
-    margin-top:5px;
+    /* margin-top: 5px; */
     padding: 10px;
     border-radius: 10%;
     transition: all 0.4s ease;
 }
 
-#user-table-delete-icon{
-    color: var(--navyblue);
-    cursor: pointer;
-    font-size: 25px;
-    margin-right: 10px;
-    margin-top:5px;
-    padding: 10px;
-    border-radius: 10%;
-    transition: all 0.4s ease;
-}
-
-#post-table-delete-icon:hover, #user-table-delete-icon:hover {
-    transform: scale(1.2); 
+#post-table-delete-icon:hover,
+#user-table-delete-icon:hover {
+    /* transform: scale(1.2); */
     background-color: rgb(207, 207, 207);
-} 
+}
