--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -258,7 +258,7 @@
 #post-save-icon,
 #post-cancel-icon {
     cursor: pointer;
-    font-size: 18px;
+    font-size: var(--icon-size);
     /* margin-right: 10px;
     margin-top: 5px; */
     padding: 10px;
@@ -271,5 +271,5 @@
 #post-save-icon:hover,
 #post-cancel-icon:hover {
     /* transform: scale(1.2);  */
-    background-color: rgb(207, 207, 207);
+    background-color: var(--hover-background);
 }
