--- a/client/src/components/Messages/Message.css
+++ b/client/src/components/Messages/Message.css
@@ -56,8 +56,8 @@
 
 .msgInput {
     width: 100%;
-    height: 10%;
-    padding: 1em 0.5em;
+    flex-grow: 1;
+    padding: 1em;
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -67,14 +67,15 @@
 }
 
 .msgInput>textarea {
-    width: 90%;
-    height: 120%;
+    width: 85%;
+    /* height: 120%; */
     resize: none;
     padding: 1em 1em;
     font-size: 14px;
     font-family: sans-serif;
     border-radius: 5px;
     border: 2px solid var(--kinda-grey);
+    flex-grow: 1;
 }
 
 .msgInput>textarea:focus {
@@ -83,7 +84,7 @@
 
 .msgInput>button {
     padding: 1em;
-    min-width: 10em;
+    width: 7em;
     font-size: 13px;
     text-transform: uppercase;
     letter-spacing: 0.9px;
