added post image editing

--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -139,6 +139,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     padding: 1em;
     border-right: 0.01rem solid var(--kinda-grey);
 }
