--- a/client/src/components/Profile/EditUser.css
+++ b/client/src/components/Profile/EditUser.css
@@ -1,18 +1,68 @@
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+.editUser-card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
-    width: 80%;
+    width: 90%;
     background-color: white;
     border-radius: 10px;
     padding: 1em;
-  }
-  
-  .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  }
-  
-  .container {
-    padding: 2px 16px;
-  }
+}
 
+.editUser-card:hover {
+    box-shadow: 0 8px 16px 0 rgba(161, 144, 144, 0.2);
+}
 
+.editUser-table {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+}
+
+.editUser-body {
+    width: 100%;
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+}
+
+.editUser-row {
+    width: 100%;
+    display: flex;
+    padding: 0.5em 0;
+}
+
+.editUser-row-left {
+    width: 50%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.editUser-row-right {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+}
+
+.editUser-row-right>input {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    padding: 0.3em;
+    border: 1px solid var(--kinda-grey);
+}
+
+.editUser-row-right>input:focus {
+    outline: none;
+}
+
+.editUser-btn-wrap {
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+}
