--- a/client/src/components/Profile/EditUser.css
+++ b/client/src/components/Profile/EditUser.css
@@ -21,7 +21,13 @@
     border-radius: 10px;
 }
 
-.editUser-body { 
+.editUserImage-form {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.editUser-body {
     width: 100%;
     display: flex;
     flex-grow: 1;
@@ -53,9 +59,9 @@
 .editUser-row-right>input {
     width: 100%;
     height: 100%;
-    border-radius: 5px;
-    padding: 0.3em;
-    border: 1px solid var(--kinda-grey);
+    padding: 0.5em;
+    border: none;
+    border-bottom: 2px solid var(--kinda-grey);
 }
 
 .editUser-row-right>input:focus {
