--- a/client/src/components/Login/Login.css
+++ b/client/src/components/Login/Login.css
@@ -4,7 +4,7 @@
     align-items: center;
     overflow: hidden;
     box-shadow: border-box;
-    height: 100%;
+    height: var(--login-page-height);
 }
 
 .login-title {
@@ -58,7 +58,6 @@
     width: 2.5em;
     height: 2.5em;
     padding: 0.5em;
-    
 }
 
 .form-field>input {
@@ -78,7 +77,7 @@
     border-bottom-color: rgb(36, 36, 36);
 }
 
-.form-input{
+.form-input {
     margin-left: 0.5em;
 }
 
@@ -107,7 +106,6 @@
     cursor: pointer;
     outline: none;
     text-decoration: none;
-    
 }
 
 .login-form-button-wrapper>button:hover {
@@ -122,7 +120,8 @@
     gap: 5px;
 }
 
-#passEye, #passEyeSlash {
+#passEye,
+#passEyeSlash {
     margin-left: -25px;
     max-width: 20px;
     max-height: 20px;
